styles/app/_app-footer.scss
.app-footer {
  display: inline-block;
  margin-top: 5px;
  margin-bottom: 10px;
  border-radius: 5px;
  padding: 5px 10px;
  background-color: var(--color-black-15);
  font-family: var(--font-family-sans-serif);
  font-size: var(--font-size-s);
  color: var(--color-white-60);
  color: color-mix(
    in srgb,
    var(--color-white-60) 60%,
    var(--current-theme-color) 40%
  );
  // The computed color-mix'ed color is rather ugly for the Shore theme, so we
  // adjust it manually to something more pleasant and readable
  .theme-shore & {
    background-color: var(--color-black-20);
    color: var(--color-white-60);
  }
  backdrop-filter: blur(5px);
  a {
    color: inherit;
  }
}
.app-footer-dedication {
  font-size: inherit;
  @include layout(desktop) {
    &:after {
      content: '|';
      margin-left: 10px;
    }
  }
}
.app-footer-links {
  display: block;
  margin: 10px 0;
  padding: 0;
  @include layout(desktop) {
    display: inline-block;
    margin: 0;
    margin-left: 10px;
  }
}
.app-footer-links li {
  display: inline-block;
  margin: 0;
  padding: 0;
  &:not(:last-child) {
    &:after {
      content: '|';
      margin: 0 10px;
    }
  }
}
.app-footer-link-help {
  position: relative;
}

